packages/tree-sitter-chute/test/corpus/literals.txt
================
Number literal
================

42;

---

(program
  (expression_statement
    (number_literal)))

================
Boolean literal
================

true;

---

(program
  (expression_statement
    (boolean_literal)))

================
Nil literal
================

nil;

---

(program
  (expression_statement
    (nil_literal)))
